# Transformers-sample

./: README.md  main.py  prompt-engineering-practice.py  prompt-engineering-practice_2.py  pyproject.toml  requirements.txt  text-generation-pipline.py  text-generation-pipline_qwen.py  text-generation-process.py
